# grubhub-mcp

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.claude-plugin/: .mcp.json  marketplace.json  plugin.json
.github/workflows/: release.yml
src/grubhub_mcp/: __init__.py  __main__.py  auth.py  client.py  server.py
src/grubhub_mcp/tools/: account.py  auth.py  cart.py  order.py  payments.py  restaurant.py  search.py
