[project]
name = "grubhub-mcp"
version = "0.1.0"
description = "MCP server for Grubhub — search restaurants, browse menus, manage cart, place orders"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "aserper" }]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
grubhub = "grubhub_mcp.server:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages]
find = { where = ["src"] }
