[project]
name = "grubhub-mcp"
version = "1.1.2"
description = "MCP server for Grubhub — search restaurants, browse menus, manage cart, place orders"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "aserper" }]
keywords = ["mcp", "grubhub", "food-delivery", "restaurant", "ordering"]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "python-semantic-release>=9.0.0",
    "build>=1.0.0",
]

[project.scripts]
grubhub = "grubhub_mcp.server:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages]
find = { where = ["src"] }

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
assets = [".claude-plugin/plugin.json", ".claude-plugin/marketplace.json"]
branch = "master"
commit_parser = "angular"
major_on_zero = false
build_command = "python -m build"

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true
